# LIO2InteractiveSLAM

./: CMakeLists.txt  README-SAX.md  README.md  README_CN.md  README_EN.md  imgui.ini  interactive_interface.sh  run.sh
config/: config.json
interactive_interface/src/: interactive_interface.cpp
odometry2graph/include/: jsonconvert.h  odometry2graph.h
odometry2graph/src/: jsonconvert.cpp  odometry2graph.cpp
test/: test_odometry2graph.cpp
